# mpc-controller-simulation

./: CMakeLists.txt  Dockerfile.txt  README.md  dynamic_bicycle_model.py  mpc-controller-simulation_submission.tar  mpc_controller.py  mpc_node.py  package.xml  plot_error.py
launch/: mpc.launch  mpc.launch.txt
